hello-rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-rancher
  namespace: hello-rancher
spec:
  type: ClusterIP
  selector:
    app: hello-rancher
  ports:
    - name: web
      port: 80
      targetPort: web
