hello-rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rancher-ingress
  namespace: hello-rancher
spec:
  ingressClassName: nginx
  rules:
  - host: hello-rancher.lab.io
    http:
      paths:
      - backend:
          service:
            name: hello-rancher
            port:
              number: 80
        path: /
        pathType: Prefix
